2007-10-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: separate global variables of pass_structure and
	pass_texi, prefix some of those vaiables, and clean variable and 
	function names.
	add more information relative to the special regions.
	Treat more systematically the special regions with an initialization
	code allowing to fill the state with relevant information.
	* texi2html.pl, texi2html.init: use a formatting function for 
	documentdescription and give more arguments to copying_comment.

2007-10-04  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: handle headings more like normal
	@-commands and not like sectionning commands.
	Don't associate headings with the following index entries.
	Separate heading absolute number and heading id from section 
	number and id.
	* Tests/*: add tests for headings

2007-10-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: use relative file names for frame
	file names (report from Graham Percival).
	* texi2html.init: use entities for simple quotes in normal text.

2007-10-02  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, T2h_i18n.pm: keep the state in the global hash
	and use it in translations.
	* texi2html.pl, texi2html.init, examples/*, doc/*: modify the 
	normal_text function reference API, add an input variable true 
	if in simple text.
	* Tests/formatting/*: test for symbols kept in preformatted and 
	@-commands in @*ref appearing in @example.

2007-10-02  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: remove trailing new line in @html block (report 
	from Graham Percival).
	* Tests/formatting/block_EOL.texi: test for end of lines in raw
	block formatting.

2007-10-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: Handle @end commands entered as
	misc commands like other misc commands during pass_text.
	Don't add a space after an @end command, and don't remove it 
	when there is no reason to.